Bug 253346 - Lancelot doesn't open my recently used documents
Summary: Lancelot doesn't open my recently used documents
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-lancelot (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-06 00:27 UTC by Kiril Vladimiroff
Modified: 2010-10-13 20:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kiril Vladimiroff 2010-10-06 00:27:39 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

This is one strange issue with my lancelot, that I don't know when exactly got available. Lancelot has the great feature to browse trough my recently used documents, but now it just doesn't open them.

For the record: The left column in "Documents" - New works fine as well.

Reproducible: Always

Steps to Reproduce:
0. Open Lancelot
1. Go to Documents
2. Choose one of you recently used documents(right column)

Actual Results:  
Lancelot got closed, but the chosen document doesn't appear to be started at all


I've put KDE 4.5.1 as my KDE version, but the same thing happens in my current 4.5.2(just upgraded).
Qt 4.7.0
Kernel 2.6.35
Comment 1 Ivan Čukić 2010-10-13 20:02:25 UTC
SVN commit 1185552 by ivan:

Recent documents now works

BUG: 253346



 M  +1 -3      BaseModel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1185552