Recent documents now works

BUG: 253346


svn path=/trunk/KDE/kdeplasma-addons/; revision=1185552